kubernetes/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-webapp
spec:
  selector:
    app: appweb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
